[project]
name = "datasette-enrichments-ollama"
version = "0.3"
description = "Datasette enrichment for analyzing row data using a locally hosted - or remote - ollama instance"
readme = "README.md"
authors = [{name = "Marcus Davidson"}]
license = {text = "Apache-2.0"}
classifiers=[
    "Framework :: Datasette",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.8"
dependencies = [
    "datasette-enrichments>=0.2",
    "sqlite-utils"
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-enrichments-gpt"
Changelog = "https://github.com/datasette/datasette-enrichments-gpt/releases"
Issues = "https://github.com/datasette/datasette-enrichments-gpt/issues"
CI = "https://github.com/datasette/datasette-enrichments-gpt/actions"

[project.entry-points.datasette]
enrichments_ollama = "datasette_enrichments_ollama"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.setuptools.package-data]
datasette_enrichments_gpt = ["templates/*"]
